[package]
name = "apple-review-responder"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP client for App Store Connect API
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
# JSON Web Token for App Store Connect authentication
jsonwebtoken = "8.3"
# Terminal UI framework
crossterm = "0.28"
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Date/time handling
chrono = { version = "0.4", features = ["serde"] }
# Configuration
clap = { version = "4.5", features = ["derive"] }
# Terminal interface
tui = "0.19"
# Event handling for terminal
# Error handling
anyhow = "1.0"
# UUID generation
uuid = { version = "1.0", features = ["v4"] }
# Base64 encoding for JWT
base64 = "0.21"
# Elliptic Curve key handling for JWT (App Store Connect uses ES256)
p256 = "0.11"
# PEM parsing for private keys
pem = "3.0"
# Environment variable loading
dotenv = "0.15"
# OpenAI API client
async-openai = "0.24"
