[package]
name = "rustpond"
version = "0.1.0"
edition = "2021"

[dependencies]
# http client for app store connect api
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
# json web token for app store connect authentication
jsonwebtoken = "8.3"
# terminal ui framework
crossterm = "0.28"
# async runtime
tokio = { version = "1.0", features = ["full"] }
# json serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# date/time handling
chrono = { version = "0.4", features = ["serde"] }
# configuration
clap = { version = "4.5", features = ["derive"] }
# terminal interface
tui = "0.19"
# event handling for terminal
# error handling
anyhow = "1.0"
# uuid generation
uuid = { version = "1.0", features = ["v4"] }
# base64 encoding for jwt
base64 = "0.21"
# elliptic curve key handling for jwt (app store connect uses es256)
p256 = "0.11"
# pem parsing for private keys
pem = "3.0"
# environment variable loading
dotenv = "0.15"
# openai api client
async-openai = "0.24"
